--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 			<version>3.5.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.11</version>
+		</dependency>
+		<dependency>
 			<groupId>com.saucelabs</groupId>
 			<artifactId>sauce_testng</artifactId>
 			<version>2.1.23</version>
