--- a/OR.properties
+++ b/OR.properties
@@ -2,5 +2,5 @@ username=sandeep98
 accesskey=0d52bde8-f602-4e95-ad15-814f19867acb
 browserData=hardCodedBrowsers
 
-# All the URL's will be managed here...
+# All the URL's will be managed here..
 URL=http://www.seleniumhq.org
